--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -2,8 +2,13 @@
 
 %h1.mt-2 イベント作成
 
+- if @event.errors.any?
+  .alert.alert-danger
+    %ul.mb-0
+      - @event.errors.full_messages.each do |message|
+        %li=message
+
 =form_with(model: @event, class: "form-horizontal") do |f|
-  #errors
   .form-group
     =f.label :name
     =f.text_field :name, class: "form-control"
